# mirmidivi_old

./: CMakeLists.txt  README.md
alsa_seq/: CMakeLists.txt  alsa_seq.cpp
core/: CMakeLists.txt  core.hpp  mirmidivi.cpp  option.cpp
